--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,48 @@
-name: Build
-
+name: Build,Analyze,scan
 on:
   push:
     branches:
       - main
-
-
 jobs:
-  build:
+  build-analyze-scan:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: sonarsource/sonarqube-scan-action@master
+      - name: Build and analyze with SonarQube
+        uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      # - uses: sonarsource/sonarqube-quality-gate-action@master
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: npm install dependency
+        run: npm install
+      - name: Docker Login
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Docker Scout Scan
+        run: |
+          docker-scout quickview fs://.
+          docker-scout cves fs://.
+      - name: Docker build and push
+        run: |
+          # Run commands to build and push Docker images
+          docker build -t myntra .
+          docker tag myntra janal024/myntra:latest
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          docker push janal024/myntra:latest
+        env:
+          DOCKER_CLI_ACI: 1
+      - name: Docker Scout Image Scan
+        run: |
+          docker-scout quickview janal024/myntra:latest
+          docker-scout cves janal024/myntra:latest
+  deploy:
+   needs: build-analyze-scan
+   runs-on: [self-hosted, linux, x64]
+   steps:
+      - name: docker pull image
+        run: docker pull janal024/myntra:latest
+      - name: Deploy to container
+        run: docker run -d --name game -p 3000:3000 janal024/myntra:latest
